2012-01-10  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* AIPlayer.cs:
	  Many changes & fixes.

2012-01-04  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  Oops... forgot to update version in the previous revision.

2012-01-04  WOnder93  <omosnacek@gmail.com>

	* ThreePlayersPlayerHelper.cs:
	  Fixed the definiton of ally in
	  Bang.AI.ThreePlayersPlayerHelper.

	* AIPlayer.cs:
	  Bang.AI.AIPlayer.triedAbility renamed to
	  Bang.AI.AIPlayer.triedAbilities.
	AI players' password set to empty.
	Added region directives for better orientation in the code.
	Some formatting fixes.
	AI players now try to play General Stores as well.

2011-12-28  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* AIPlayer.cs:
	  Fixed build failure on MS Visual Studio 2010.

2011-10-28  WOnder93  <omosnacek@gmail.com>

	* Bang# AI.csproj:
	  Migrated to Mono/.NET 4.0
	Updated to comply with the new C# standard.

2011-09-29  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* AIPlayer.cs:
	  Adapt to the changes in the interface.

2011-09-28  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* AIPlayer.cs:
	  Adapted to the new interface.

2011-09-19  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* AIPlayer.cs:
	* CardHelper.cs:
	  Adapted to the new Bang# interface.

2011-09-10  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* AIPlayer.cs:
	  AI players now manage threading for responses on their own
	  (via ThreadPool). The
	  Bang.IPlayerListener.OnResponseRequested event is now
	  removed.

2011-08-18  WOnder93  <omosnacek@gmail.com>

	* Bang# AI.csproj:
	* AssemblyInfo.cs:
	  

	* StandardPlayerHelper.cs:
	  Avoided field storage of MarshalByRefObjects because of
	  their server lifetime limits.
	Improved performance by caching property values in methods.
	Excluded self when generating list of allies.

	* TwoPlayersPlayerHelper.cs:
	* ThreePlayersPlayerHelper.cs: